# EchoBloom

./: .gitignore  README.md  SETUP.md  TESTING_GUIDE.md  docker-compose.yml  echobloom.txt  package-lock.json  package.json
backend/: .env.example  Dockerfile  fix_activities.py  pyproject.toml
backend/app/: main.py
backend/app/core/: config.py  database.py
backend/app/models/: activity.py  echo.py  seed.py  session_model.py  user.py  user_profile.py
backend/app/routers/: __init__.py  activities.py  analytics.py  auth.py  consent.py  echo.py  search_seeds.py  sensors.py  sessions.py
frontend/: .env.example  Dockerfile  middleware.ts  next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/app/: error.tsx  global-error.tsx  layout.tsx  loading.tsx  page.tsx
frontend/app/activities/: page.tsx
frontend/app/activities/breathing/: page.tsx
frontend/app/activities/gratitude/: page.tsx
frontend/app/activities/grounding/: page.tsx
frontend/app/activities/journal/: page.tsx
frontend/app/api/echo/: route.ts
frontend/app/garden/: page.tsx
frontend/app/insights/: page.tsx
frontend/app/onboard/[[...rest]]/: page.tsx
frontend/app/profile/: page.tsx
frontend/app/seeds/: page.tsx
frontend/components/ui/atoms/: AnimatedLogo.tsx  Button.tsx  ClientOnly.tsx  FloatingOrb.tsx  Logo.tsx
frontend/components/ui/molecules/: EmpathyResponse.tsx  GlassCard.tsx  InputBubble.tsx
frontend/components/ui/organisms/: AdvancedGarden.tsx  AuthForm.tsx  Footer.tsx  (+2 more)
frontend/lib/hooks/: useSpeechRecognition.ts
frontend/public/: manifest.json
